--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Build and test
 
 on:
   push:
@@ -6,44 +6,85 @@ on:
       - '**.md'
   pull_request:
     paths-ignore:
-      - '**.md' 
+      - '**.md'
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+  packages: write
+
+
+# Allow one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
   build:
-
-    runs-on: windows-latest
-
+    runs-on: ubuntu-latest
     steps:
-    - name: checkout
-      uses: actions/checkout@v1
+      - name: Checkout
+        uses: actions/checkout@v3.1.0
+        with:
+          fetch-depth: 0
 
-    - name: Setup dotnet
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 2.2.108
-        source-url: https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json
-      env:
-        NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      - name: Setup dotnet
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: 2.2.108
+          source-url: https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json
+        env:
+          NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        
+      - name: Restore packages
+        run: dotnet restore
+      
+      - name: Build
+        run: dotnet build
+      
+      - name: Test
+        run: dotnet test
+      
+      - name: Pack for version
+        if: startsWith(github.ref, 'refs/tags/v')
+        run: dotnet pack -c Release -p:PackageVersion=${GITHUB_REF:11}
 
-    - name: Setup msbuild
-      uses: microsoft/setup-msbuild@v1.0.2
+      - name: Pack without version
+        if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
+        run: dotnet pack -c Release -p:PackageVersion=1.0.0.0
 
-    - name: Setup nuget
-      uses: nuget/setup-nuget@v1
-      with:
-        nuget-version: 'latest'
+      - name: Upload windows artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: nuget
+          path: ./FingerMath/bin/Release/FingerMath.*.nupkg
 
-    - name: Build with dotnet
-      run: dotnet build --configuration Release
+  pack:
+    needs: build
+    name: deploy
+    runs-on: windows-latest
+    if: startsWith(github.ref, 'refs/tags/v')
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: nuget
+          path: ./artifacts
 
-    - name: Test with nunit
-      run: dotnet test --verbosity normal
+      - name: Setup nuget
+        uses: nuget/setup-nuget@v1
+        with:
+          nuget-version: 'latest'
 
-    - name: Remove File
-      run: Remove-Item –path ./FingerMath/obj –recurse
+      - name: Setup nuget config
+        run: nuget.exe sources add -name github -source "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json" -username ${{ github.actor }} -password ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Restore packages with nuget
-      run: msbuild ./FingerMath/FingerMath-BridgeNet.csproj /restore /property:Configuration=Release
-
-    - name: Build with msbuild
-      run: msbuild ./FingerMath/FingerMath-BridgeNet.csproj /property:Configuration=Release
+      - name: Upload to GitHub Packages
+        run: |
+            for f in ./artifacts/*.nupkg
+            do
+              nuget push $f -Source "github"
+            done
+        shell: bash
